crates/pg_syntax/tests/snapshots/postgres_regress/memoize@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_mergejoin TO off;
---
VariableSetStmt@0..28
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..20 "enable_mergejoin"
  Whitespace@20..21 " "
  To@21..23 "TO"
  Whitespace@23..24 " "
  AConst@24..27
    Off@24..27 "off"
  Ascii59@27..28 ";"

