crates/pg_syntax/tests/snapshots/postgres_regress/memoize@13.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX flt_f_idx ON flt (f);
---
IndexStmt@0..34
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..22 "flt_f_idx"
  Whitespace@22..23 " "
  On@23..25 "ON"
  Whitespace@25..26 " "
  RangeVar@26..29
    Ident@26..29 "flt"
  Whitespace@29..30 " "
  Ascii40@30..31 "("
  IndexElem@31..32
    Ident@31..32 "f"
  Ascii41@32..33 ")"
  Ascii59@33..34 ";"

