crates/pg_syntax/tests/snapshots/postgres_regress/memoize@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX strtest_n_idx ON strtest (n);
---
IndexStmt@0..42
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..26 "strtest_n_idx"
  Whitespace@26..27 " "
  On@27..29 "ON"
  Whitespace@29..30 " "
  RangeVar@30..37
    Ident@30..37 "strtest"
  Whitespace@37..38 " "
  Ascii40@38..39 "("
  IndexElem@39..40
    Ident@39..40 "n"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

