crates/pg_syntax/tests/snapshots/postgres_regress/memoize@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO strtest VALUES('one','one'),('two','two'),('three',repeat(md5('three'),100));"
---
InsertStmt@0..89
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "strtest"
  Whitespace@19..20 " "
  SelectStmt@20..86
    Values@20..26 "VALUES"
    Ascii40@26..27 "("
    List@27..38
      AConst@27..32
        Sconst@27..32 "'one'"
      Ascii44@32..33 ","
      AConst@33..38
        Sconst@33..38 "'one'"
    Ascii41@38..39 ")"
    Ascii44@39..40 ","
    Ascii40@40..41 "("
    List@41..52
      AConst@41..46
        Sconst@41..46 "'two'"
      Ascii44@46..47 ","
      AConst@47..52
        Sconst@47..52 "'two'"
    Ascii41@52..53 ")"
    Ascii44@53..54 ","
    Ascii40@54..55 "("
    List@55..86
      AConst@55..62
        Sconst@55..62 "'three'"
      Ascii44@62..63 ","
      FuncCall@63..86
        Ident@63..69 "repeat"
        Ascii40@69..70 "("
        FuncCall@70..81
          Ident@70..73 "md5"
          Ascii40@73..74 "("
          AConst@74..81
            Sconst@74..81 "'three'"
        Ascii41@81..82 ")"
        Ascii44@82..83 ","
        AConst@83..86
          Iconst@83..86 "100"
  Ascii41@86..87 ")"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

