crates/pg_syntax/tests/snapshots/postgres_regress/memoize@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_bitmapscan TO off;
---
VariableSetStmt@0..29
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..21 "enable_bitmapscan"
  Whitespace@21..22 " "
  To@22..24 "TO"
  Whitespace@24..25 " "
  AConst@25..28
    Off@25..28 "off"
  Ascii59@28..29 ";"

