crates/pg_syntax/tests/snapshots/postgres_regress/memoize@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET max_parallel_workers_per_gather TO 2;
---
VariableSetStmt@0..41
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..35 "max_parallel_workers_ ..."
  Whitespace@35..36 " "
  To@36..38 "TO"
  Whitespace@38..39 " "
  AConst@39..40
    Iconst@39..40 "2"
  Ascii59@40..41 ";"

