crates/pg_syntax/tests/snapshots/postgres_regress/memoize@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET hash_mem_multiplier TO 1.0;
---
VariableSetStmt@0..31
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..23 "hash_mem_multiplier"
  Whitespace@23..24 " "
  To@24..26 "TO"
  Whitespace@26..27 " "
  AConst@27..30
    Fconst@27..30 "1.0"
  Ascii59@30..31 ";"

